# hermes-legion-commander

./: .gitignore  CHANGELOG.md  README.md  RELEASE-MANIFEST.json  RUNNABLE-VERIFICATION.md  SHA256SUMS.txt  UTF8-FIX.md  VALIDATION.json  pyproject.toml
config/: checkpoint_competition.example.toml  hermes_supervisor.example.toml  model_council.example.toml  model_council.multi-provider.example.toml
docs/: ALTERNATING_MODE.md  ANCHORED_TRUTH.md  AUTOMATED_SETUP.md  BRANCH_PR_WORKFLOW.md  CAMPAIGN_VALIDATION.md  CAPABILITY_RETENTION.md  CHECKPOINT_COMPETITION.md  CROSS_VALIDATION.md  DUAL_WORKER_RUNTIME.md  GENERIC_WORKER_PROFILES.md  GITHUB_HEALTH.md  HANDOFF_SCHEMA.md  HERMES_SUPERVISOR.md  ITERATION_FORMAT.md  PROMPT_IMPROVEMENTS_FROM_MANUAL_RUNS.md  REFERENCE_NOTES.md  REPO_GRAPH.md  ROUTING_CONTEXT.md  SAFETY_MODEL.md  SHARED_CONTEXT.md  SOUL_DESIGN.md  TOKEN_COST_PREFLIGHT.md  USAGE_LEARNING.md  WORKFLOW_GOVERNANCE.md
hermes_legion_commander/: __init__.py  anchored_truth.py  checkpoint_competition.py  cli.py  config_toml.py  doctor.py  github_health.py  loop_driver.py  model_council.py  pr_workflow.py  profile_harness.py  prompt_contracts.py  prompt_metrics.py  repo_graph.py  roadmap.py  routing_context.py  stop_condition.py  supervisor.py  token_cost.py  worker_runtime.py  workflow_governance.py
scripts/: README.md  bootstrap-hermes-legion-commander.ps1  bootstrap-hermes-legion-commander.sh  install-hermes-legion-commander.ps1  install-hermes-legion-commander.sh  migrate-to-codex-claude.ps1  migrate-to-codex-claude.sh  repair-hermes-legion-commander.ps1  (+6 more)
(+27 files in other folders)
