[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-legion-commander"
version = "1.7.3"
description = "Hermes-supervised multi-CLI council, competition, and alternating orchestrator"
requires-python = ">=3.11"

[project.scripts]
hermes-legion-commander = "hermes_legion_commander.cli:main"
legion-commander = "hermes_legion_commander.cli:legacy_main"

[tool.setuptools.packages.find]
include = ["hermes_legion_commander*"]
